[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
aws = ["neo3/aws"]
[package]
name = "examples-big-numbers"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["R3E Network <contact@r3e.network>"]


[dev-dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
eyre = "0.6.5"
primitive-types = "0.12.1"
