cargo-features = ["edition2024"]

[package]
name = "neo_famous_contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
neo3 = { path = "../../" }
tokio = { version = "1.0", features = ["full"] }
primitive-types = "0.12.1"

[[example]]
name = "flamingo_finance"
path = "examples/flamingo_finance.rs"

[[example]]
name = "neoburger_neo"
path = "examples/neoburger_neo.rs"

[[example]]
name = "grandshare"
path = "examples/grandshare.rs"

[[example]]
name = "neocompound"
path = "examples/neocompound.rs"
