[package]
name = "neo_nodes_examples"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network <contact@r3e.network>"]
publish = false

[dependencies]
neo3 = { path = "../../", package = "neo3" }
tokio = { version = "1.32", features = ["full"] }
eyre = "0.6"

# Add examples based on the files in the examples directory
[[example]]
name = "connect_to_node"
path = "examples/connect_to_node.rs" 