[package]
name = "neo_transactions_examples"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network <contact@r3e.network>"]
publish = false


[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
aws = ["neo3/aws"]
[dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.32", features = ["full"] }
eyre = "0.6"

[[example]]
name = "create_and_send_transaction"
path = "examples/create_and_send_transaction.rs" 