[package]
name = "neo_x"
version = "0.1.0"
edition = "2021"

[dependencies]
neo = { path = "../../" }
tokio = { version = "1.0", features = ["full"] }
primitive-types = "0.12.1"

[[example]]
name = "neo_x_evm"
path = "examples/neo_x_evm.rs"

[[example]]
name = "neo_x_bridge"
path = "examples/neo_x_bridge.rs"
