cargo-features = ["edition2024"]

[package]
name = "examples-providers"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.74"
authors = ["R3E Network <contact@r3e.network>"]

[dev-dependencies]
NeoRust = { path = "../../" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.51"
reqwest = "0.11.6"
url = "2.2.2"
serde = "1.0.130"
serde_json = "1.0.68"
thiserror = "1.0.24"
eyre = "0.6.5"
primitive-types = "0.12.1"
